# finance_tracker_srv

./: .env.example  Cargo.toml  readme.md
migrations/: 20250702125013_create_user.sql  20250702125106_create_auth_provider.sql  20250711034148_create_pockets.sql  20250711034504_create_category.sql  20250711034912_create_transaction.sql  20250714040437_rename_table_transactions.sql  20250714040506_add_name_transaction.sql
src/: main.rs
src/config/: cors.rs  db.rs
src/constants/: mod.rs  pocket.rs  token.rs
src/handlers/: mod.rs  not_found.rs
src/middlewares/: user_auth.rs
src/modules/: mod.rs
src/modules/auth/: mod.rs  route.rs
src/modules/auth/handlers/: google_oauth.rs  mod.rs  types.rs
src/modules/auth/models/: auth_provider.rs  auth_provider_type.rs  mod.rs
src/modules/auth/services/: google_oauth.rs  mod.rs  types.rs
src/modules/pocket/: mod.rs  route.rs
src/modules/pocket/handler/: mod.rs
src/modules/pocket/models/: mod.rs  pocket.rs
src/modules/pocket/repositories/: mod.rs  types.rs
src/modules/pocket/services/: mod.rs
src/modules/transaction/: mod.rs
src/modules/transaction/handler/: mod.rs  types.rs
src/modules/transaction/models/: mod.rs  transaction.rs  transaction_type.rs
src/modules/transaction/repositories/: mod.rs  types.rs
src/modules/transaction/services/: mod.rs
src/modules/transaction_category/models/: mod.rs  transaction_category.rs
src/routes/: mod.rs
src/utils/: mod.rs
src/utils/errors/: json_error.rs  mod.rs
src/utils/helpers/: mod.rs
src/utils/validators/: decimal.rs  mod.rs
(+12 files in other folders)
