[package]
name = "finance-tracker-srv"
version = "0.1.0"
edition = "2024"
default-run = "finance-tracker-srv"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "postgres",
  "runtime-tokio",
  "tls-native-tls",
  "uuid",
  "chrono",
  "bigdecimal",
] }
dotenvy = "0.15"
uuid = { version = "1.17", features = ["serde", "v4"] }
serde = "1.0.219"
url = "2.5.4"
anyhow = "1.0.98"
reqwest = { version = "0.12.21", features = ["json"] }
jsonwebtoken = "9.3.1"
serde_json = "1.0.140"
chrono = { version = "0.4.41", features = ["serde"] }
time = "0.3.41"
derive_more = "2.0.1"
bigdecimal = { version = "0.4.8", features = ["serde"] }
